Added Jyutping talker (it works once per page load)

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
         <ul class="nav navbar-nav">
           <li class="active"><a class="btn">Sound Board</a>
           <li><a class="btn">Test Cards</a>
+          <li><a class="btn">Talker</a>
         </ul>
       </nav>
 
-      <form class="form-jyutping form-inline" role="form">
+      <div class="form-jyutping form-inline" role="form">
         <h2 class="form-jyutping-heading">Enter jyutping</h2>
         <input type="text" class="form-control" placeholder="Jyutping" autofocus>
-        <button class="btn btn-lg btn-primary" type="submit">Play</button>
-      </form>
+        <button class="btn btn-lg btn-primary">Play</button>
+      </div>
 
       <div class="cards">
 	      <h2>Test Cards</h2>
