--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
             <p class="jyutping"></p>
           </div>
         </div>
-        <button class="btn btn-lg btn-primary cards-answer"></button>
-        <button class="btn btn-lg btn-primary cards-answer"></button>
-        <button class="btn btn-lg btn-primary cards-answer"></button>
-        <button class="btn btn-lg btn-primary cards-answer"></button>
+		<div class="row answer-btns">
+			<div class="col-md-3"><button class="btn btn-block btn-lg btn-primary cards-answer"></button></div>
+			<div class="col-md-3"><button class="btn btn-block btn-lg btn-primary cards-answer"></button></div>
+			<div class="col-md-3"><button class="btn btn-block btn-lg btn-primary cards-answer"></button></div>
+			<div class="col-md-3"><button class="btn btn-block btn-lg btn-primary cards-answer"></button></div>
+		</div>
 	  </div>
 
       <div class="soundboard"></div>
