Include underscore.js

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-2.0.3.min.js"></script>
+    <script src="js/underscore-min.js"></script>
     <script src="js/buffer-loader.js"></script>
     <script src="js/soundboard.js"></script>
   </body>
