Updated talker interface

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
       <div class="form-jyutping form-inline" role="form">
         <h2 class="form-jyutping-heading">Enter jyutping</h2>
-        <input type="text" class="form-control" placeholder="Jyutping" autofocus>
-        <button class="btn btn-lg btn-primary">Play</button>
+        <div class="input-group input-group-lg">
+          <input type="text" class="form-control" placeholder="Jyutping">
+          <div class="input-group-btn">
+            <button class="btn btn-primary">Play</button>
+          </div>
+        </div>
       </div>
 
       <div class="cards">
