--- a/index.html
+++ b/index.html
@@ -26,15 +26,27 @@
 
   <body>
 
-    <div class="container">
+    <div class="nav navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SoundBoard</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a class="btn" href="#soundboard">Sound Board</a>
+            <li><a class="btn" href="#testcards">Test Cards</a>
+            <li><a class="btn" href="#talker">Talker</a>
+          </ul>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </div>
 
-      <nav class="nav navbar navbar-default">
-        <ul class="nav navbar-nav">
-          <li class="active"><a class="btn" href="#soundboard">Sound Board</a>
-          <li><a class="btn" href="#testcards">Test Cards</a>
-          <li><a class="btn" href="#talker">Talker</a>
-        </ul>
-      </nav>
+    <div class="container">
 
       <section id="soundboard" class="soundboard"></section>
 
@@ -46,6 +58,7 @@
             <button class="btn btn-primary">Play</button>
           </div>
         </div>
+        <ul id="recent-phrases"></ul>
       </section>
 
       <section id="testcards" class="cards">
